# Plume

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/bot/: bot.py
src/cogs/commands/sandbox/: pages.py
src/commands/economy/: balance.py
src/commands/help/: __init__.py
src/commands/ownerships/: claim.py
src/commands/rules/: rules.py
src/commands/songs/: play.dpy  play.py
src/commands/speech/: speech_commands.py
src/commands/system/: ping.py
src/configuration/: configuration.py
src/events/: on_ready.py
src/events/tracker/: on_message_delete.py  on_message_edit.py
src/jobs/: cogs_watcher.py
src/utils/: __init__.py  shared_functions.py
src/utils/embeds/: __init__.py  permission_embeds.py
supabase/: config.toml
supabase/migrations/: 20250522220051_create_ownerships.sql  20250522222153_balances.sql
