[project]
name = "plume"
version = "0.1.0"
description = ""
authors = [
    {name = "Sereti"}
]
requires-python = "3.12.6"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "nextcord (>=3.0.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyright (>=1.1.394,<2.0.0)",
    "supabase (>=2.15.1,<3.0.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "coqui-tts (>=0.26.0,<0.27.0)",
    "nextcord-ext-menus (>=1.5.7,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pyright]
include = [
    "main.py",
]

typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
